fix shift: renderCalendar

--- a/web/static/css/shift.css
+++ b/web/static/css/shift.css
@@ -56,7 +56,7 @@
     height: 100%;
 }
 
-.calendar table td .day {
+.calendar table td .cell-day {
     background-color: #f9f9f9;
     height: 1rem;
     font-size: 0.7rem;
@@ -64,16 +64,20 @@
     font-weight: 600;
 }
 
-.calendar table td .names {
+.calendar table td .cell-body {
     display: flex;
     justify-content: center;
     align-items: center;
     flex-grow: 1;
 }
 
-.calendar table td .names input {
+.calendar table td .cell-body input {
     border: 0;
     width: 95%;
     font-size: 0.8rem;
     text-align: center;
+}
+
+#modal-calendar table td .cell-body {
+    opacity: 0.4;
 }
